Correction mobile

--- a/css.css
+++ b/css.css
@@ -402,25 +402,8 @@ footer li {
         grid-gap: 2rem;
      
     }
-}
-
-@media screen and (max-width: 966px) {
-    .section_activities>a:nth-child(1) {
-        grid-area: 1/1/3/3
+    .section_activities {
+        
+        grid-area: auto;
     }
-    .section_activities>a:nth-child(2) {
-        grid-area: 4/1/6/3
-    }
-    .section_activities>a:nth-child(3) {
-        grid-area: 5/3/6/4
-    }
-    .section_activities>a:nth-child(4) {
-        grid-area: 1/3/3/4
-    }
-    .section_activities>a:nth-child(5) {
-        grid-area: 1/4/3/5
-    }
-    .section_activities>a:nth-child(6) {
-        grid-area: 5/4/6/5
-    } 
-}
+ }
